--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "ssh_util"
-version = "0.1.0"
+version = "0.9.0"
 description = "ssh command utility"
 authors = ["Takayuki Shimizukawa <shimizukawa@gmail.com>"]
 license = "Apache-2.0"
@@ -30,7 +30,7 @@ cryptography = ">=2.6"
 towncrier = ">=19.2"
 
 [build-system]
-requires = ["poetry>=0.12", "setuptools>=30.3.0", "wheel", "setuptools_scm"]
+requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
 
 [tool.poetry.scripts]
