--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [tool.poetry]
-name = "ssh_util"
+name = "sshh"
 version = "0.9.0"
 description = "ssh command utility"
 authors = ["Takayuki Shimizukawa <shimizukawa@gmail.com>"]
 license = "Apache-2.0"
 readme = "README.rst"
 include = ["CHANGELOG.rst"]
-homepage = "https://github.com/shimizukawa/ssh_util"
-repository = "https://github.com/shimizukawa/ssh_util"
-documentation = "https://github.com/shimizukawa/ssh_util/blob/master/README.rst"
+homepage = "https://github.com/shimizukawa/sshh"
+repository = "https://github.com/shimizukawa/sshh"
+documentation = "https://github.com/shimizukawa/sshh/blob/master/README.rst"
 keywords = ["ssh", "utility"]
 classifiers = [
     "Development Status :: 4 - Beta",
@@ -34,10 +34,10 @@ requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
 
 [tool.poetry.scripts]
-ssh_util = "ssh_util.main:main"
+sshh = "sshh.main:main"
 
 [tool.towncrier]
-package = "ssh_util"
+package = "sshh"
 package_dir = "."
 filename = "CHANGELOG.rst"
 directory = "changelog/"
