--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,10 +35,10 @@ build-backend = "poetry.masonry.api"
 
 [tool.poetry.scripts]
 sshh = "sshh.sshh:main"
-sshh-agent = "sshh.agent:main"
-sshh-add = "sshh.add:main"
-sshh-config = "sshh.config:main"
-sshh-askpass = "sshh.askpass:main"
+sshh-agent = "sshh.sshh_agent:main"
+sshh-add = "sshh.sshh_add:main"
+sshh-config = "sshh.sshh_config:main"
+sshh-askpass = "sshh.sshh_askpass:main"
 
 [tool.towncrier]
 package = "sshh"
